# NT219-Final-Labs

./: .gitignore  CMakeLists.txt  README.md  self_grade_checklist.md
common/: CMakeLists.txt
common/include/common/: base64.hpp  cli.hpp  encoding.hpp  error.hpp  file_utils.hpp  hex.hpp  json_utils.hpp  random.hpp  sample_generator.hpp  stats.hpp  timer.hpp
common/src/: base64.cpp  cli.cpp  encoding.cpp  error.cpp  file_utils.cpp  hex.cpp  json_utils.cpp  random.cpp  sample_generator.cpp  stats.cpp  timer.cpp
docs/: build_guide.md  environment.md  lab1_completion_checklist.md  lab1_stage3b_notes.md  lab1_stage3c_notes.md  lab1_stage3d_notes.md  lab1_stage3e_completion_notes.md  lab1_stage3e_plan.md  lab1_stage3g_export_gui_notes.md  lab1_stage3g_gui_backend_notes.md  usage_examples.md
docs/lab1/: LAB1_BUILD_GUIDE.md  LAB1_GUI_USAGE.md
gui/lab1_python/: README.md  collect_native_libs.ps1  lab1_gui.py  requirements.txt
lab1_aes_cryptopp/: CMakeLists.txt
lab1_aes_cryptopp/include/lab1/: aes_crypto.hpp  lab1_c_api.h
lab1_aes_cryptopp/src/: aes_crypto.cpp  lab1_c_api.cpp  main.cpp
lab2_aes_pure_cpp/: CMakeLists.txt
lab2_aes_pure_cpp/src/: main.cpp
lab3_rsa_hybrid/: CMakeLists.txt
lab3_rsa_hybrid/src/: main.cpp
lab4_hash_pki_attacks/: CMakeLists.txt
lab4_hash_pki_attacks/src/: main.cpp
lab5_digital_signatures/: CMakeLists.txt
lab5_digital_signatures/src/: main.cpp
lab6_pqc/: CMakeLists.txt
lab6_pqc/src/: main.cpp
report/lab1/: lab1_completion_status.md  lab1_evidence_summary.md  lab1_final_status.md  lab1_final_verification_log.md  lab1_final_verification_log_linux.md  lab1_report_section_draft.md  lab1_report_section_final.md  lab1_stage3g_gui_export_section.md
report/lab1/benchmark_results/: lab1_mingw_20260524_110710.csv  lab1_mingw_20260524_111748.csv
report/lab1/final_logs/: linux_aestool_selftest.txt  linux_benchmark.txt  linux_build.txt  linux_completion_tests_diagnostic.txt  linux_ctest.txt  linux_final_kat.txt  linux_final_verify_diagnostic.txt  windows_generate_plots.txt  windows_mingw_benchmark.txt  windows_mingw_build.txt  windows_mingw_ctest.txt  windows_mingw_final_kat.txt  windows_mingw_final_verify.txt  windows_mingw_selftest.txt  windows_msvc_benchmark.txt  windows_msvc_build.txt  windows_msvc_completion_tests.txt  windows_msvc_ctest.txt  windows_msvc_where_cl.txt
report/tables/lab1/: lab1_benchmark_environment_summary.csv  lab1_benchmark_environment_summary.md  lab1_linux_20260524_110726.csv  lab1_linux_20260524_111818.csv  lab1_mingw_20260524_110648.csv  lab1_msvc_20260524_111808.csv
scripts/linux/: build_linux.sh  clean.sh  lab1_final_verify.sh  lab1_generate_plots.sh  lab1_run_benchmarks.sh  lab1_run_completion_tests.sh  run_tests.sh  setup_ubuntu.sh  stage0_check_ubuntu.sh  stage3g_generate_environment_plots.sh
scripts/python/: lab1_generate_environment_plots.py  lab1_plot_benchmarks.py
scripts/windows/: build_mingw.ps1  build_msvc.ps1  clean.ps1  lab1_cleanup_generated.ps1  lab1_final_verify.ps1  lab1_generate_plots.ps1  lab1_run_benchmarks.ps1  lab1_run_completion_tests.ps1  lab1_run_negative_tests.ps1  run_tests.ps1  stage0_check_windows.ps1  stage3g_collect_native_libs.ps1  stage3g_generate_environment_plots.ps1
tests/: CMakeLists.txt
tests/common/: test_base64.cpp  test_encoding.cpp  test_hex.cpp  test_json_utils.cpp  test_random.cpp  test_sample_generator.cpp  test_stats.cpp
tests/lab1/: test_aes_crypto.cpp  test_aes_crypto_completion.cpp  test_aes_crypto_negative.cpp  test_aes_crypto_vectors.cpp
vectors/lab1/: aes_stage3_smoke_vectors.json  aes_stage3b_kat_vectors.json  aes_stage3e_final_kat_vectors.json
